2004-06-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::find_matches_at_path_iter): Use
	reference arguments instead of pointers.  Make use of sigc::ref()
	to bind a reference argument to a signal handler.
	(FileTree::replace_matches_at_path_iter): ditto
	(FileTree::save_file_at_iter): Likewise.  Also get rid of the
	on-demand creation of error_list, because it's unnecessary and
	not exception-safe.  The caller is responsible for instantiating
	the MessageList now.

2004-06-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (validate_encoding): Be slightly more picky
	and demand the first and last characters of the encoding string to
	be alpha-numeric.

2004-06-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (validate_encoding): Better don't try to call
	Glib::convert() with identical input and output encodings.  I heard
	the iconv on Solaris doesn't like that idea at all.

2004-06-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.cc (PrefDialog::on_response): Suggest a sync
	to the GConf client when the dialog is closed.

2004-06-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade: Remove empty string properties and all
	GtkEntry "invisible_char" properties.  The latter had no purpose
	other than to annoy the translators.

	* ui/prefdialog.glade: ditto.

2004-06-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (selection_clipboard): New string constant
	defining the name of the selection to use for the clipboard.
	(MainWindow::on_cut): Use the selection_clipboard constant.
	(MainWindow::on_copy): ditto
	(MainWindow::on_paste): ditto.

2004-06-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.{cc,h} (Controller::edit_actions): Rename from
	clip_actions.
	(Controller::erase): Add action.
	(Controller::load_xml): Fetch cut, copy, paste and delete menu
	items from the glade file.
